# games

./: .gitignore  LICENSE  Readme.md  pom.xml
configs/contests/: Code4Life.xml  FantasticBits.xml
configs/medium/: DiceProbabilityCalculator.xml  War.xml
configs/puzzles/: Boggle.xml  FoldingPaper.xml  Hangman.xml  MagicSquare.xml  NextCarLicensePlate.xml  NumbersInLetters.xml  OneDSpreadsheet.xml  SnakeEncoding.xml  TheFastest.xml  TimerClashCode.xml
data/easy/: BlowingFuse1.txt  CreditCardVerifier1.txt  CreditCardVerifier4.txt  Darts1.txt  Darts2.txt  DisorderedFirstContact1.txt  ExpandPolynomial1.txt  ExpandPolynomial5.txt  HorseRacingHyperDual1.txt  JackSilverCasino1.txt  PiratesTreasure1.txt  RectangularBlockSpinner1.txt  RubiksCubeMovement111_1.txt  SelfDrivingCarTesting1.txt  SelfDrivingCarTesting2.txt  (+3 more)
modules/python/games/: __main__.py  pyproject.toml  requirements.txt
modules/python/games/src/: puzzle.py
modules/python/games/src/aoc/: __init__.py  puzzle_aoc.py
modules/python/games/src/aoc/aoc2024/: __init__.py  day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
modules/python/games/src/aoc/aoc2025/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
modules/python/games/src/utils/: __init__.py  geometry.py  inputs.py  lists.py  maps.py  orientation.py  ranges.py  tuples.py  vectors.py
modules/python/games/test/: __init__.py  shared.py
modules/python/games/test/utils_test/: inputs_test.py  lists_test.py  orientation_test.py  tuples_test.py  vectors_test.py
(+178 files in other folders)
